# rusty-secure

./: .gitignore  .gitmodules  Cargo.toml  README.md
api-server/: .gitignore  Cargo.toml  NOTE.md  README.md
api-server/src/: app_state.rs  config.rs  error.rs  google_storage_client.rs  handlers.rs  main.rs  models.rs  mongo_client.rs  payloads.rs  server.rs
api-server/src/config/: config.rs
api-server/src/errors/: error.rs
api-server/src/handlers/: auth_handler.rs  mod.rs  picture_hander.rs  status_handler.rs  user_handler.rs
api-server/src/middlewares/: auth.rs  mod.rs
api-server/src/models/: device.rs  mod.rs  picture.rs  status.rs  token.rs  user.rs
api-server/src/payloads/: google.rs  mod.rs  picture.rs  status.rs  user.rs
api-server/src/repositories/: gcs_repository.rs  mod.rs  mongo_repository.rs
api-server/src/services/: auth.rs  google_auth.rs  mod.rs  picture.rs  status.rs  user.rs
desktop-client/: .gitignore  Cargo.toml
desktop-client/src/: main.rs
desktop-client/src/app/: config.rs  message.rs  mod.rs  state.rs
desktop-client/src/errors/: error.rs  mod.rs
desktop-client/src/models/: auth.rs  mod.rs  user.rs
desktop-client/src/services/: api.rs  mod.rs
esp32-cam/: .gitignore  Cargo.toml  README.md  dev.sh  release.sh  sdkconfig.defaults
esp32-cam/.cargo/: config.toml
esp32-cam/src/: esp_cam.rs  lib.rs
esp32-cam/src/cam/: camera_controller.rs  mod.rs
esp32-cam/src/config/: config.rs
esp32-cam/src/esp_now_comm/: README.md  esp_now.rs  esp_now_comm.rs  mod.rs
esp32-cam/src/http/: client.rs  mod.rs  server.rs
esp32-main/: .gitignore  Cargo.toml  README.md
esp32-main/.cargo/: config.toml
esp32-main/src/: lib.rs
esp32-main/src/config/: config.rs  mod.rs
esp32-main/src/display/: lcd.rs  mod.rs
esp32-main/src/error/: error.rs
esp32-main/src/esp_now_comm/: README.md  esp_now.rs  esp_now_comm.rs  mod.rs
esp32-main/src/http/: client.rs  mod.rs
esp32-main/src/light/: led.rs  mod.rs
esp32-main/src/sensor/: mod.rs  ultrasonic.rs
esp32-main/src/tasks/: display.rs  http.rs  http_client.rs  http_server.rs  led.rs  mod.rs  net.rs  sensor.rs  wifi.rs
