[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "./src/server.rs"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
bson = "2.14.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
google-cloud-storage = "0.24.0"
mongodb = "3.2.3"
serde = "1.0.217"
serde_json = "1.0.140"
