[package]
name = "esp32-cam"
version = "0.1.0"
authors = ["Butcat <butcat@protonmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-cam"
path = "./src/bin/async_main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
debug = true 

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
heapless = { version = "0.8.0", default-features = false }
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync", "alloc"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-std", "executor-thread", "log"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-idf-hal = "0.45.2"
embassy-sync = "0.6.2"
esp-idf-sys = { version = "0.36.1", features = ["native"] }
anyhow = "1.0"
embedded-svc = "0.28.1"
tokio = { version = "1", features = ["rt", "sync"] }
serde_json = "1.0.140"
serde = "1.0.219"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"
